--- a/css/style.css
+++ b/css/style.css
@@ -541,9 +541,29 @@ a:hover, * a:hover, a:hover * {
     color:rgba(0,0,0,0.5);
 }
 a.source {
+    position: relative;
+    top:-.3em;
+    font-family:'PT Sans', Helvetica, Arial, sans-serif !important;
+    font-size:.8em;
     text-decoration: none;
-    background-color: rgba(245,245,0,0.5);
-    font-style: italic;
+    background-color: rgba(0,70,70,0.1);
+    line-height:1;
+    padding:.1em .3em .15em;
+}
+a.source:hover {
+    background-color:rgba(0,70,70,0.2);
+}
+a.source:before {
+    content:'';
+    display:inline-block;
+    height:1em;
+    width:1em;
+    position:relative;
+    top:.15em;
+    margin:.1em .35em 0 .25em;
+    background-image:url('../img/icon-documents.png');
+    background-position: center center;
+    background-size:contain;
 }
 .row.solo {
     margin-bottom:4em;
@@ -581,7 +601,7 @@ a.source {
 }
 p.credit {
     text-transform:uppercase;
-    font-family:'Maven Pro', Helvetica, Arial, sans-serif !important;
+    font-family:'PT Sans', Helvetica, Arial, sans-serif !important;
     font-weight:400;
     text-transform:uppercase;
     font-size:.65em;
