--- a/css/style.css
+++ b/css/style.css
@@ -842,6 +842,7 @@ p.timeline-intro {
 p.timeline-source {
     font-family: 'PT Sans', Helvetica, Arial, sans-serif;
     font-size: 0.85em;
+    line-height: 1.2;
     font-style: italic;
     text-align: right;
 }
