--- a/css/style.css
+++ b/css/style.css
@@ -1157,7 +1157,8 @@ div#footer-bar ul.social li {
 #lessoncontrols {
     margin-top: 1em;
 }
-#lessonnav {
+#lessonnav,
+#buildnav {
     position:relative;
     display:block;
     width:100%;
@@ -1206,6 +1207,11 @@ div#footer-bar ul.social li {
     transition:background-color:0.2s;
     outline:0;
 }
+#lessonnav button:hover,
+#buildnav button:hover {
+    border:3px solid rgba(0,0,0,0.8);
+    background-color:rgba(230,230,230,1.0);
+}
 #lessonnav button:nth-child(1) {
     left:0;
 }
@@ -1224,7 +1230,8 @@ div#footer-bar ul.social li {
 #lessonnav button:nth-child(6) {
     right:0;
 }
-#lessonplaypause {
+#lessonplaypause,
+#buildplaypause {
     position:relative;
     display:block;
     background:transparent;
@@ -1236,7 +1243,8 @@ div#footer-bar ul.social li {
     border-radius: 3px;
     outline:0;
 }
-.lessonplay:after {
+.lessonplay:after,
+.buildplay:after {
     content:'';
     display:block;
     position:absolute;
@@ -1250,7 +1258,8 @@ div#footer-bar ul.social li {
     border-bottom: .8em solid transparent;
     border-left: 1.4em solid rgba(0,0,0,0.3);
 }
-.lessonpause:before {
+.lessonpause:before,
+.buildpause:before {
     width: 8%;
     height: 1.4em;
     background: rgba(0,0,0,0.3);
@@ -1259,7 +1268,8 @@ div#footer-bar ul.social li {
     top: .5em;
     left: 38%;
 }
-.lessonpause:after {
+.lessonpause:after,
+.buildpause:after {
     width: 8%;
     height: 1.4em;
     background: rgba(0,0,0,0.3);
@@ -1268,15 +1278,103 @@ div#footer-bar ul.social li {
     top: .5em;
     right: 38%;
 }
-#lessonplaypause:hover {
+#lessonplaypause:hover,
+#buildplaypause:hover {
     border-color: rgba(0,0,0,0.8);
 }
-#lessonplaypause.lessonplay:hover:after {
+#lessonplaypause.lessonplay:hover:after,
+#buildplaypause.buildplay:hover:after {
     border-left: 1.4em solid rgba(0,0,0,0.8);
 }
 #lessonplaypause.lessonpause:hover:after,
-#lessonplaypause.lessonpause:hover:before {
+#lessonplaypause.lessonpause:hover:before,
+#buildplaypause.buildpause:hover:after,
+#buildplaypause.buildpause:hover:before {
     background:rgba(0,0,0,0.8);
+}
+#buildnav:after {
+    content:'';
+    width:100%;
+    height:0;
+    border-bottom:3px solid rgba(0,0,0,0.3);
+    position:absolute;
+    top:.6em;
+    left:0;
+    z-index: -1;
+}
+#buildnav button {
+    font-size:1.375em;
+    line-height:1.2;
+    color:#eee;
+    font-weight:bold;
+    cursor:pointer;
+    -webkit-border-radius:.7em;
+    -moz-border-radius:.7em;
+    border-radius:.7em;
+    border:3px solid rgba(0,0,0,0.3);
+    width:1em;
+    height:1em;
+    padding:.2em 0 0 .2em;
+    background:#fff;
+    position:absolute;
+    top:0;
+    -webkit-transition:background-color:0.2s;
+    transition:background-color:0.2s;
+    outline:0;
+}
+#buildnav button:nth-child(1) {
+    left:0;
+}
+#buildnav button:nth-child(2) {
+    left:9%;
+}
+#buildnav button:nth-child(3) {
+    left:18%;
+}
+#buildnav button:nth-child(4) {
+    left:27%;
+}
+#buildnav button:nth-child(5) {
+    left:36%;
+}
+#buildnav button:nth-child(6) {
+    left:45%;
+}
+#buildnav button:nth-child(7) {
+    left:54%;
+}
+#buildnav button:nth-child(8) {
+    left:63%;
+}
+#buildnav button:nth-child(9) {
+    left:72%;
+}
+#buildnav button:nth-child(10) {
+    left:81%;
+}
+#buildnav button:nth-child(11) {
+    left:90%;
+}
+#buildnav button:nth-child(12) {
+    right:0;
+}
+#build .imgholder {
+    position: relative;
+    display:block;
+    width:100%;
+}
+#builddate {
+    position: absolute;
+    bottom:.5em;
+    right:1em;
+    text-align:right;
+    font-size:1.75em;
+    font-family: 'PT Sans', Helvetica, Arial, sans-serif;
+    text-transform: uppercase;
+    display:block;
+    color:rgba(255,255,255,0.975);
+    font-weight: 700;
+    text-shadow: 2px 2px 4px rgba(0,0,0,0.75);
 }
 @media (max-width:1240px) {
     .inset-video-right, section.inset .inset-video-right {
