--- a/css/style.css
+++ b/css/style.css
@@ -142,6 +142,16 @@ p.byline {
     font-size:1em;
     margin-bottom:2.5em;
 }
+p.published {
+    text-transform:uppercase;
+    font-family:'PT Sans', Helvetica, Arial, sans-serif !important;
+    font-weight:400;
+    text-transform:uppercase;
+    font-size:.85em;
+    margin:2.5em 0;
+    text-align:center;
+    color:rgba(34,34,34,0.8);
+}
 p.bylinebottom {
     text-align:center;
     font-size:.9em;
